--- a/EquipmentGeneratorWPF/EquipmentGeneratorWPF.csproj
+++ b/EquipmentGeneratorWPF/EquipmentGeneratorWPF.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EquipmentGenerator.csproj" />
+    <ProjectReference Include="..\EquipmentGenerator\EquipmentGenerator.csproj" />
   </ItemGroup>
 
 </Project>
