WPF and middle layer update

--- a/EquipmentGeneratorWPF/EquipmentGeneratorWPF.csproj
+++ b/EquipmentGeneratorWPF/EquipmentGeneratorWPF.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Window1.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="Window1.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EquipmentGenerator\EquipmentGenerator.csproj" />
   </ItemGroup>
 
